--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -61,7 +61,7 @@ layout: default
   <article class="post-content">
     {% if page.toc and page.toc.beginning %}
       <div id="table-of-contents">
-        {{ content | toc_only }}
+        {{ % toc % }}
       </div>
       <hr>
     {% endif %}
