--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -60,9 +60,7 @@ layout: default
 
   <article class="post-content">
     {% if page.toc and page.toc.beginning %}
-      <div id="table-of-contents">
-        {{ % toc % }}
-      </div>
+      <div id="table-of-contents">{ % toc % }</div>
       <hr>
     {% endif %}
     <div id="markdown-content">
